# APP_VIRGIN

./: .gitignore  ARCHITECTURE_UPDATE.md  AUTHENTICATION_FLOW.md  BUILD_FILE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_WORKFLOW.md  DOCUMENTATION_INDEX.md  FRONTEND_GUIDELINES.md  FUTURE_FIXES_FRONTEND_GUIDELINES.md  FUTURE_IMPROVEMENTS_PARETO.md  INFRASTRUCTURE_AND_SCALING_GUIDE.md  PERFORMANCE_GUIDE.md  PLATFORM_GUIDE.md  PRODUCTION_REVIEW.md  README.md  SETUP_GUIDE.md  STATEMENT_OF_SOTA.md  STATEMENT_OF_SOTA_UPDATE.md  TEMPLATE_SETUP.md  TESTING_GUIDE.md  TODO.md  package.json
FUTURE_FIXES_NEEDED/: COMPREHENSIVE_ARCHITECTURAL_REVIEW.md  FRONTEND_PRODUCTION_ADDITIONS.md  FRONTEND_PRODUCTION_ADDITIONS_PART2.md
backend/: .env.example  Cargo.toml  diesel.toml
backend/bindings/: CreateUserRequest.ts  UpdateUserRequest.ts  User.ts  UserResponse.ts
backend/migrations/2024_01_01_000001_create_users/: up.sql
backend/src/: config.rs  db.rs  main.rs  schema.rs
backend/src/api/: auth.rs  csrf.rs  health.rs  jwt.rs  mod.rs  password.rs
backend/src/features/users/domain/: entities.rs  mod.rs  validation.rs
backend/src/features/users/infrastructure/: repository.rs
backend/tests/: generate_types.rs
docs/: EXECUTIVE_SUMMARY.md  FRONTEND_BACKEND_INTEGRATION.md  GEMINI_CRITICAL_FIXES.md  GEMINI_FINAL_FIXES.md  LOGIC_TREE_SCHEMATIC.md
examples/: README.md
mobile/: .env.example  .eslintrc.js  App.tsx  babel.config.js  package-lock.json  package.json  tsconfig.json
mobile/src/api/: client.ts  offlineQueryClient.ts
scripts/: sync-types.ps1
(+28 files in other folders)
