[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.1", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = { version = "8.1", features = ["serde-compat"] }
