[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = { version = "8.1", features = ["serde-compat"] }
thiserror = "1"
email_address = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5", features = ["limit"] }
tower_governor = { version = "0.8", features = ["axum"] }
tower-http = { version = "0.6", features = ["cors", "compression-full", "trace"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
